# rabbitmq-pub-sub-fastapi-app

./: README.md
backend/: app.py  pyproject.toml
backend/db/: __init__.py  status.py
backend/dto/: status.py
backend/messaging/: __init__.py  consumer.py  publisher.py
backend/routes/: status.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: DateTimePicker.css  DateTimePicker.jsx
