[tool.poetry]
name = "upswing-venv"
version = "0.1.0"
description = ""
authors = ["ShreerajM <svmhatre58@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pika = "^1.3.2"
fastapi = "^0.111.0"
pymongo = "^4.8.0"
gunicorn = "^22.0.0"
ruff = "^0.5.1"
mypy = "^1.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
